# discord-defaultrole

./: Cargo.toml  example-config.json
src/: main.rs
